feat: Lehrveranstaltungs-Details, Materialverwaltung und Integrationstests (Slice 2) (#2)
* Updated todo

* Updated CI to only trigger on pushes to main

* updated README and TODOS

* Integrated Courses and CoursMaterial with tests into the backend

* Finished Courses for Backend

* added courses to frontend

* Removed unused imports and files

---------

Co-authored-by: stormhurricane <xstormhurricane@gmail.com>